--- a/templates/about.html
+++ b/templates/about.html
@@ -16,93 +16,84 @@
           <!-- ~~~~~~~~~~~~~~~~~~~~~~~~
               Home 1 : Brand Section
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-          <div class="brand-section">
-            <div class="container">
-              <div class="home-6_brands-wrapper-inner">
-                <div class="slidercontainer h-100">
-                  <div class="row align-items-center h-100">
-                    <div class="slidercontainer rounded">
-                      <div class="slider">
-                        <div class="logos brands-wrapper">
-                          <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left"
-                            data-aos-delay="800">
-                            <img class="icon-brand" src={% static '/image/home/1.png' %} alt="brand-logo">
-                          </div>
-                          <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left"
-                            data-aos-delay="800">
-                            <img class="icon-brand" src={% static '/image/home/2.png' %} alt="brand-logo">
-                          </div>
-                          <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left"
-                            data-aos-delay="800">
-                            <img class="icon-brand" src={% static '/image/home/3.png' %} alt="brand-logo">
-                          </div>
-                          <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left"
-                            data-aos-delay="800">
-                            <img class="icon-brand" src={% static '/image/home/4.png' %} alt="brand-logo">
-                          </div>
-                          <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left"
-                            data-aos-delay="800">
-                            <img class="icon-brand" src={% static '/image/home/5.png' %} alt="brand-logo">
-                          </div>
-                          <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left"
-                            data-aos-delay="800">
-                            <img class="icon-brand" src={% static '/image/home/6.png' %} alt="brand-logo">
-                          </div>
-                          <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left"
-                            data-aos-delay="800">
-                            <img class="icon-brand" src={% static '/image/home/7.png' %} alt="brand-logo">
-                          </div>
-                          <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left"
-                            data-aos-delay="800">
-                            <img class="icon-brand" src={% static '/image/home/8.png' %} alt="brand-logo">
-                          </div>
-                          <!-- <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
-                      <img class="icon-brand" src={% static '/image/home/9.png'%} alt="brand-logo">
-                    </div> -->
-                          <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left"
-                            data-aos-delay="800">
-                            <img class="icon-brand" src={% static '/image/home/10.png' %} alt="brand-logo">
-                          </div>
-                          <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left"
-                            data-aos-delay="800">
-                            <img class="icon-brand" src={% static '/image/home/11.png' %} alt="brand-logo">
-                          </div>
-                          <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left"
-                            data-aos-delay="800">
-                            <img class="icon-brand" src={% static '/image/home/12.png' %} alt="brand-logo">
-                          </div>
-                          <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left"
-                            data-aos-delay="800">
-                            <img class="icon-brand" src={% static '/image/home/13.png' %} alt="brand-logo">
-                          </div>
-                          <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left"
-                            data-aos-delay="800">
-                            <img class="icon-brand" src={% static '/image/home/14.png' %} alt="brand-logo">
-                          </div>
-                          <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left"
-                            data-aos-delay="800">
-                            <img class="icon-brand" src={% static '/image/home/15.png' %} alt="brand-logo">
-                          </div>
-                          <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left"
-                            data-aos-delay="800">
-                            <img class="icon-brand" src={% static '/image/home/16.png' %} alt="brand-logo">
-                          </div>
-                          <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left"
-                            data-aos-delay="800">
-                            <img class="icon-brand" src={% static '/image/home/17.png' %} alt="brand-logo">
-                          </div>
-                          <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left"
-                            data-aos-delay="800">
-                            <img class="icon-brand" src={% static '/image/home/18.png' %} alt="brand-logo">
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
+          <div class="slidercontainer rounded">
+            <div class="slider">
+              <div class="logos brands-wrapper">
+                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left"
+                  data-aos-delay="800">
+                  <img class="icon-brand" src={% static '/image/home/1.png' %} alt="brand-logo">
+                </div>
+                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left"
+                  data-aos-delay="800">
+                  <img class="icon-brand" src={% static '/image/home/2.png' %} alt="brand-logo">
+                </div>
+                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left"
+                  data-aos-delay="800">
+                  <img class="icon-brand" src={% static '/image/home/3.png' %} alt="brand-logo">
+                </div>
+                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left"
+                  data-aos-delay="800">
+                  <img class="icon-brand" src={% static '/image/home/4.png' %} alt="brand-logo">
+                </div>
+                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left"
+                  data-aos-delay="800">
+                  <img class="icon-brand" src={% static '/image/home/5.png' %} alt="brand-logo">
+                </div>
+                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left"
+                  data-aos-delay="800">
+                  <img class="icon-brand" src={% static '/image/home/6.png' %} alt="brand-logo">
+                </div>
+                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left"
+                  data-aos-delay="800">
+                  <img class="icon-brand" src={% static '/image/home/7.png' %} alt="brand-logo">
+                </div>
+                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left"
+                  data-aos-delay="800">
+                  <img class="icon-brand" src={% static '/image/home/8.png' %} alt="brand-logo">
+                </div>
+                <!-- <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
+            <img class="icon-brand" src={% static '/image/home/9.png'%} alt="brand-logo">
+          </div> -->
+                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left"
+                  data-aos-delay="800">
+                  <img class="icon-brand" src={% static '/image/home/10.png' %} alt="brand-logo">
+                </div>
+                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left"
+                  data-aos-delay="800">
+                  <img class="icon-brand" src={% static '/image/home/11.png' %} alt="brand-logo">
+                </div>
+                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left"
+                  data-aos-delay="800">
+                  <img class="icon-brand" src={% static '/image/home/12.png' %} alt="brand-logo">
+                </div>
+                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left"
+                  data-aos-delay="800">
+                  <img class="icon-brand" src={% static '/image/home/13.png' %} alt="brand-logo">
+                </div>
+                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left"
+                  data-aos-delay="800">
+                  <img class="icon-brand" src={% static '/image/home/14.png' %} alt="brand-logo">
+                </div>
+                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left"
+                  data-aos-delay="800">
+                  <img class="icon-brand" src={% static '/image/home/15.png' %} alt="brand-logo">
+                </div>
+                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left"
+                  data-aos-delay="800">
+                  <img class="icon-brand" src={% static '/image/home/16.png' %} alt="brand-logo">
+                </div>
+                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left"
+                  data-aos-delay="800">
+                  <img class="icon-brand" src={% static '/image/home/17.png' %} alt="brand-logo">
+                </div>
+                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left"
+                  data-aos-delay="800">
+                  <img class="icon-brand" src={% static '/image/home/18.png' %} alt="brand-logo">
                 </div>
               </div>
             </div>
           </div>
+                  
 
           <div class="home-8_hero-text-block" bis_skin_checked="1">
             <h4 class="integrator-quote">
@@ -162,7 +153,7 @@
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     Technologies Section
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
-<div class="integrator-technologies-section" bis_skin_checked="1">
+<div class="integrator-technologies-section padding-bottom-150" bis_skin_checked="1">
   <div class="container" bis_skin_checked="1">
     <h3 class="integrator-technologies-title text-center">Используем проверенные технологии для эффективной работы
       с Битрикс24. Наши критерии выбора инструментов — безопасность, стабильность и адаптивность под задачи бизнеса.
