--- a/templates/base.html
+++ b/templates/base.html
@@ -222,7 +222,7 @@
             </a>
             <a href="#" class="integrator-btn integrator-btn-light btn-fill--up">
               <span>Войти</span></a>
-            <a href="#" class="integrator-btn btn-fill--up">
+            <a href="#" class="">
               <span>Попробовать бесплатно</span></a>
           </div>
         </nav>
