--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -16910,17 +16910,31 @@ Common: Spacing Gutters
 
 .slidercontainer {
   overflow: hidden;
+
   .slider {
     animation: slidein 30s linear infinite;
     white-space: nowrap;
+
     .logos {
       width: 100%;
       display: inline-block;
       margin: 0px 0;
+
       .fab {
         width: calc(100% / 6);
-        animation: fade-in 0.5s 
-          cubic-bezier(0.455, 0.03, 0.515, 0.955) forwards;
+        animation: fade-in 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955) forwards;
+      }
+    }
+
+    .teams {
+      width: 100%;
+      display: inline-block;
+      margin: 0px 0;
+
+      .fab {
+        width: 540px;
+        margin-left: 10px;
+        animation: fade-in 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955) forwards;
       }
     }
   }
